--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.OnlineMeetingApp"
         tools:targetApi="31">
         <activity
+            android:name=".Settings"
+            android:exported="false" />
+        <activity
+            android:name=".Contacts"
+            android:exported="false" />
+        <activity
+            android:name=".Meetings"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
@@ -21,14 +30,12 @@
         <activity
             android:name=".Register"
             android:exported="false" />
-
         <activity
             android:name=".HomePage"
             android:exported="false" />
         <activity
             android:name=".Login"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
