--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,10 @@
         android:name="android.hardware.camera"
         android:required="true" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -19,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineMeetingApp"
         tools:targetApi="31">
+        <activity
+            android:name=".ProfileNew"
+            android:exported="false" />
         <activity
             android:name=".JitsiWebView"
             android:exported="false" />
@@ -59,11 +63,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-<!--        <service-->
-<!--            android:name="org.jitsi.meet.sdk.ConnectionService"-->
-<!--            android:exported="false">-->
-<!--            &lt;!&ndash; Add any other attributes or intent filters as needed &ndash;&gt;-->
-<!--        </service>-->
     </application>
 
 </manifest>
